--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@ HUGGINGFACEHUB_API_TOKEN = "your-key-here"
 #GOOGLE_API_KEY = "AIzaSyAWtXHiIVP3GYwmwf4rOEsJKXKtPCsDUkc"
 
 GOOGLE_API_KEY = "AIzaSyAZyJByG0TSdLQWCvan9_zTA85xFtBwDLY"
+#"AIzaSyAWtXHiIVP3GYwmwf4rOEsJKXKtPCsDUkc"
 GROQ_API_KEY="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"
